--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .header-background {
+    background-color: transparent;
+    background-image: url('@/assets/image/cover.c5eecd4b.png'), linear-gradient(#fbc300, #c98a00);
+    background-position: 50%;
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
+  }
+}
